--- a/index.html/index.html
+++ b/index.html/index.html
@@ -8,8 +8,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <style>
 :root {
-  --azul-capacita: #2E5EAA;
-  --azul-claro: #3B7FDC;
+  --azul-capacita: #346a56;
+  --azul-claro: #97c15d;
   --gris-oscuro: #333333;
   --verde-sm: #4C7C46;
   --dorado: #FFD700;
