--- a/index.html/index.html
+++ b/index.html/index.html
@@ -72,12 +72,12 @@ button:hover {
 
 #menuPrincipal h2 {
     margin-bottom: 25px;
-    color: #2E5EAA; /* Azul corporativo */
+    color: #346a56; /* Azul corporativo */
     font-size: 24px;
 }
 
 #menuPrincipal button {
-    background-color: #2E5EAA; /* Azul corporativo */
+    background-color: #346a56; /* Azul corporativo */
     color: white;
     border: none;
     padding: 12px 0;
@@ -88,7 +88,7 @@ button:hover {
 }
 
 #menuPrincipal button:hover {
-    background-color: #3B7FDC; /* Azul claro para hover */
+    background-color: #346a56; /* Azul claro para hover */
     transform: translateY(-2px);
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
