--- a/index.html/index.html
+++ b/index.html/index.html
@@ -338,21 +338,13 @@ input[type="date"] {
 </section>
 
 <!-- Sección Trabajador -->
-<section id="seccionTrabajador" class="seccion" style="display:none">
    <section id="seccionTrabajador" class="seccion" style="display:none">
-    <h2 style="color: #346a56; margin-bottom: 25px;">Ingrese su RUT</h2>
-    <input type="text" id="rutAcceso" placeholder="Ej: 12345678-9" 
-           style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ddd; border-radius: 6px;">
+    <h2 style="color: #2E5EAA; margin-bottom: 25px;">Ingrese su RUT</h2>
+    <input type="text" id="rutAcceso" placeholder="Ej: 12345678-9">
     
-    <div style="display: flex; justify-content: space-between; gap: 15px;">
-        <button class="boton-volver" onclick="volverMenu()" 
-                style="background: #f0f0f0; color: #333; flex: 1;">
-            Volver
-        </button>
-        <button onclick="accederTrabajador()" 
-                style="background-color: #2E5EAA; color: white; flex: 1;">
-            Entrar
-        </button>
+    <div class="botones-container">
+        <button class="boton-volver" onclick="volverMenu()">Volver</button>
+        <button onclick="accederTrabajador()">Entrar</button>
     </div>
 </section>
 
