--- a/index.html/index.html
+++ b/index.html/index.html
@@ -456,14 +456,14 @@ const modulos = [
   { 
     tipo: 'texto', 
     contenido: `
-      <h3>1. Declaración de Igualdad de Género</h3>
+      <h3>Declaración de Igualdad de Género</h3>
       <p>Durante este curso usaremos un lenguaje no sexista. Sin embargo, emplearemos el masculino genérico por claridad.</p>
     `
   },
   { 
     tipo: 'texto', 
     contenido: `
-      <h3>2. ¿Qué es el fuego?</h3>
+      <h3>¿Qué es el fuego?</h3>
       <ul>
         <li>Es una <strong>reacción química</strong>.</li>
         <li>Es un <strong>proceso exotérmico</strong>.</li>
@@ -487,7 +487,7 @@ const modulos = [
   { 
     tipo: 'texto', 
     contenido: `
-      <h3>3. Normativa Aplicable</h3>
+      <h3>Normativa Aplicable</h3>
       <p><strong>Decreto Supremo N°594:</strong></p>
       <ul>
         <li>Artículo 44: Medidas generales de prevención</li>
@@ -512,7 +512,7 @@ const modulos = [
   { 
     tipo: 'texto', 
     contenido: `
-      <h3>4. Normas Chilenas Aplicables</h3>
+      <h3>Normas Chilenas Aplicables</h3>
       <ul>
         <li><strong>NCh 2111:</strong> Protección contra incendios</li>
         <li><strong>NCh 1429:</strong> Extintores portátiles</li>
@@ -536,7 +536,7 @@ const modulos = [
   { 
     tipo: 'texto', 
     contenido: `
-      <h3>5. Triángulo del Fuego</h3>
+      <h3>Triángulo del Fuego</h3>
       <p>El fuego requiere tres elementos para existir:</p>
       <ul>
         <li><strong>Comburente:</strong> Oxígeno (generalmente del aire)</li>
@@ -565,7 +565,7 @@ const modulos = [
   { 
     tipo: 'texto', 
     contenido: `
-      <h3>6. Tetraedro del Fuego y Transferencia de Calor</h3>
+      <h3>Tetraedro del Fuego y Transferencia de Calor</h3>
       <p>El modelo moderno añade un cuarto componente:</p>
       <ul>
         <li><strong>Reacción en cadena:</strong> Proceso químico autosostenido</li>
@@ -592,7 +592,7 @@ const modulos = [
   { 
     tipo: 'texto', 
     contenido: `
-      <h3>12. Principales Causas de Incendio (Parte 1)</h3>
+      <h3>Principales Causas de Incendio (Parte 1)</h3>
       <p><strong>Conexiones eléctricas deficientes:</strong></p>
       <ul>
         <li>Enchufes no certificados</li>
@@ -617,7 +617,7 @@ const modulos = [
   { 
     tipo: 'texto', 
     contenido: `
-      <h3>13. Principales Causas de Incendio (Parte 2)</h3>
+      <h3>Principales Causas de Incendio (Parte 2)</h3>
       <p><strong>Mal manejo de cilindros de gas:</strong></p>
       <ul>
         <li>Alterar conexiones</li>
@@ -641,7 +641,7 @@ const modulos = [
   { 
     tipo: 'texto', 
     contenido: `
-      <h3>14. Métodos de Extinción del Fuego (Parte 1)</h3>
+      <h3>Métodos de Extinción del Fuego (Parte 1)</h3>
       <p><strong>Por enfriamiento:</strong> Disminuir el calor</p>
       <ul>
         <li>Ejemplo: Agua sobre madera</li>
@@ -664,7 +664,7 @@ const modulos = [
   { 
     tipo: 'texto', 
     contenido: `
-      <h3>15. Métodos de Extinción del Fuego (Parte 2)</h3>
+      <h3>Métodos de Extinción del Fuego (Parte 2)</h3>
       <p><strong>Por sofocación:</strong> Eliminación del oxígeno</p>
       <ul>
         <li>Ejemplo: Tapar sartén ardiendo</li>
@@ -687,7 +687,7 @@ const modulos = [
   { 
     tipo: 'texto', 
     contenido: `
-      <h3>16. Prevención de Incendios</h3>
+      <h3>Prevención de Incendios</h3>
       <p><strong>Medidas generales:</strong></p>
       <ul>
         <li>No fumar en zonas riesgosas</li>
@@ -713,7 +713,7 @@ const modulos = [
   { 
     tipo: 'texto', 
     contenido: `
-      <h3>18-19. Tipos de Extintores</h3>
+      <h3>Tipos de Extintores</h3>
       <p><strong>Clasificación por agente extintor:</strong></p>
       <ul>
         <li><strong>Polvo seco:</strong> ABC (multiuso) o BC</li>
@@ -738,7 +738,7 @@ const modulos = [
   { 
     tipo: 'texto', 
     contenido: `
-      <h3>20. Partes del Extintor y Uso</h3>
+      <h3>Partes del Extintor y Uso</h3>
       <p><strong>Pasos para uso seguro del extintor:</strong></p>
       <ol>
         <li>Retirar el pasador de seguridad</li>
@@ -753,7 +753,7 @@ const modulos = [
   { 
     tipo: 'texto', 
     contenido: `
-      <h3>21. Instrucciones Generales</h3>
+      <h3>Instrucciones Generales</h3>
       <p><strong>Recomendaciones importantes:</strong></p>
       <ul>
         <li>Conocer la ubicación de los extintores</li>
@@ -770,7 +770,7 @@ const modulos = [
   { 
     tipo: 'texto', 
     contenido: `
-      <h3>22. Norma Chilena N°1433</h3>
+      <h3>Norma Chilena N°1433</h3>
       <p><strong>Requisitos para instalación de extintores:</strong></p>
       <ul>
         <li>Altura mínima: 20 cm desde el suelo</li>
@@ -795,7 +795,7 @@ const modulos = [
   { 
     tipo: 'texto', 
     contenido: `
-      <h3>23. Mantención y Rotulación</h3>
+      <h3>Mantención y Rotulación</h3>
       <p><strong>DS N° 594 Art. 51:</strong></p>
       <ul>
         <li>Etiqueta visible con información clara</li>
