--- a/index.html/index.html
+++ b/index.html/index.html
@@ -8,7 +8,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <style>
 :root {
-  --azul-capacita: #346a56;
+  --azul-capacita: #4C7C46;
   --azul-claro: #97c15d;
   --gris-oscuro: #333333;
   --verde-sm: #4C7C46;
