--- a/index.html/index.html
+++ b/index.html/index.html
@@ -72,12 +72,12 @@ button:hover {
 
 #menuPrincipal h2 {
     margin-bottom: 25px;
-    color: #346a56; /* Azul corporativo */
+    color: #4C7C46; /* Azul corporativo */
     font-size: 24px;
 }
 
 #menuPrincipal button {
-    background-color: #346a56; /* Azul corporativo */
+    background-color: #4C7C46; /* Azul corporativo */
     color: white;
     border: none;
     padding: 12px 0;
@@ -88,7 +88,7 @@ button:hover {
 }
 
 #menuPrincipal button:hover {
-    background-color: #346a56; /* Azul claro para hover */
+    background-color: #4C7C46; /* Azul claro para hover */
   transform: translateY(-2px);
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
@@ -1181,7 +1181,7 @@ function generarCertificado() {
   doc.setFontSize(12);
   doc.setTextColor(100);
   doc.text('Modalidad: E-Learning', 20, 130);
-  doc.text('Duración: 4 horas cronológicas', 20, 136);
+  doc.text('Duración: 1:00:00 horas cronológicas', 20, 136);
   doc.text('Fecha inicio: ' + new Date().toLocaleDateString('es-CL'), 20, 142);
   doc.text('Fecha término: ' + new Date().toLocaleDateString('es-CL'), 20, 148);
   
