--- a/index.html/index.html
+++ b/index.html/index.html
@@ -92,7 +92,7 @@ button:hover {
 
 #menuPrincipal button:hover {
   background-color: var(--verde-oscuro);
-  color: var(--verde-oscuro);
+  background-color: var(--verde-oscuro);
   transform: translateY(-2px);
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
