--- a/index.html/index.html
+++ b/index.html/index.html
@@ -94,13 +94,13 @@ button:hover {
   background-color: var(--verde-oscuro);
   background-color: var(--verde-oscuro);
   transform: translateY(-2px);
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
 
 .boton-volver {
   background-color: var(--gris-medio);
   color: var(--blanco);
-  border: 1px solid var(--gris-oscuro);
+ border: 1px solid #ddd;
 }
 
 .boton-volver:hover {
