--- a/index.html/index.html
+++ b/index.html/index.html
@@ -122,7 +122,16 @@ button:active, .boton-volver:active {
 }
 
 .boton-volver:hover {
-  background-color: var(--verde-primario);
+  background-color: var(--verde-primario); /* #98C15E */
+    color: var(--blanco); /* #FFFFFF */
+    border: none;
+    padding: 12px 20px;
+    border-radius: 6px;
+    font-size: 16px;
+    margin: 10px 5px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 /* Estilos para el input de RUT */
