--- a/index.html/index.html
+++ b/index.html/index.html
@@ -122,7 +122,7 @@ button:active, .boton-volver:active {
 }
 
 .boton-volver:hover {
-  background-color: var(--verde-primario); /* #98C15E */
+  background-color: var(--verde-oscuro); /* #98C15E */
     color: var(--blanco); /* #FFFFFF */
     border: none;
     padding: 12px 20px;
