--- a/index.html/index.html
+++ b/index.html/index.html
@@ -171,7 +171,7 @@ button:active, .boton-volver:active {
 #mosaicoCursos { 
   display: none; 
   max-width: 1200px; 
-  background: transparent; 
+  background: #DCE6D4; 
   box-shadow: none;
 }
 
@@ -430,7 +430,7 @@ input[type="date"] {
 
 <!-- Sección Trabajador -->
    <section id="seccionTrabajador" class="seccion" style="display:none">
-    <h2 style="color: #2E5EAA; margin-bottom: 25px;">Ingrese su RUT</h2>
+    <h2 style="color: #16471C; margin-bottom: 25px;">Ingrese su RUT</h2>
     <input type="text" id="rutAcceso" placeholder="Ej: 12345678-9">
     
     <div class="botones-container">
@@ -540,7 +540,7 @@ input[type="date"] {
                 </div>
             </div>
             
-            <div id="formularioCapacitacion" style="display: none; background: #f9f9f9; padding: 20px; border-radius: 8px; margin-bottom: 20px;">
+            <div id="formularioCapacitacion" style="display: none; background: #16471C; padding: 20px; border-radius: 8px; margin-bottom: 20px;">
                 <h3>Datos de la Capacitación</h3>
                 <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 15px;">
                     <div>
