--- a/index.html/index.html
+++ b/index.html/index.html
@@ -22,7 +22,7 @@ html, body {
   padding: 0; 
   width: 100%; 
   height: 100%; 
-  font-family: "Calibri", "Candara", "Segoe", "Segoe UI", "Optima", Arial, sans-serif;
+  font-family: Calibri, Candara, Segoe, Segoe UI, Optima, Arial, sans-serif;
   background: url('fondo.png') no-repeat center center fixed; 
   background-size: cover;
 }
