--- a/index.html/index.html
+++ b/index.html/index.html
@@ -171,7 +171,7 @@ button:active, .boton-volver:active {
 #mosaicoCursos { 
   display: none; 
   max-width: 1200px; 
-  background: #DCE6D4; 
+  background:transparent; 
   box-shadow: none;
 }
 
