--- a/index.html/index.html
+++ b/index.html/index.html
@@ -60,7 +60,7 @@ button, .boton-volver {
     border: none;
     padding: 12px 20px;
     border-radius: 6px;
-    font-size: 16px;
+    font-size: 18px;
     margin: 10px 5px;
     cursor: pointer;
     transition: all 0.3s ease;
@@ -94,9 +94,9 @@ button:active, .boton-volver:active {
   background-color: var(--verde-primario);
   color: var(--blanco);
   border: 1px solid var(--verde-oscuro);
-    padding: 12px 0;
+    padding: 14px 0;
     border-radius: 6px;
-    font-size: 16px;
+    font-size: 18px;
     cursor: pointer;
       transition: all 0.3s ease;
 }
@@ -114,7 +114,7 @@ button:active, .boton-volver:active {
     border: none;
     padding: 12px 20px;
     border-radius: 6px;
-    font-size: 16px;
+    font-size: 18px;
     margin: 10px 5px;
     cursor: pointer;
     transition: all 0.3s ease;
@@ -127,7 +127,7 @@ button:active, .boton-volver:active {
     border: none;
     padding: 12px 20px;
     border-radius: 6px;
-    font-size: 16px;
+    font-size: 18px;
     margin: 10px 5px;
     cursor: pointer;
     transition: all 0.3s ease;
@@ -136,7 +136,7 @@ button:active, .boton-volver:active {
 
 /* Estilos para el input de RUT */
 #seccionTrabajador input {
-    font-size: 16px;
+    font-size: 18px;
     padding: 12px 15px;
     border: 1px solid #ddd;
     border-radius: 6px;
@@ -161,7 +161,7 @@ button:active, .boton-volver:active {
 #seccionTrabajador .botones-container button {
     flex: 1;
     padding: 12px;
-    font-size: 16px;
+    font-size: 18px;
     border-radius: 6px;
     cursor: pointer;
     transition: all 0.3s ease;
@@ -193,13 +193,13 @@ button:active, .boton-volver:active {
   display: flex; 
   flex-direction: column; 
   align-items: center;
-  border: 2px solid var(--azul-capacita);
+  border: 2px solid var(--verde-oscuro);
 }
 
 .curso-tile:hover { 
   transform: translateY(-5px); 
   box-shadow: 0 4px 15px rgba(0,0,0,0.2); 
-  background: var(--azul-capacita); 
+  background: var(--verde-oscuro); 
   color: white; 
 }
 
@@ -275,7 +275,7 @@ strong {
 .final-curso h3 {
   color: var(--verde-sm);
   border-bottom: none;
-  font-size: 24px;
+  font-size: 26px;
 }
 
 /* Panel de empresa */
